@@ -107,6 +107,11 @@
     MODULE
     {
         name = ASPTextWriter
+        useBoundingBox = true
+        bottomLeftX = 169
+        bottomLeftY = 46
+        width = 827
+        height = 333
     }
 }
 
@@ -131,6 +136,8 @@
     MODULE
     {
         name = ASPTextWriter
+        textures = model000
+        normals = model001
     }
 }
 
