@@ -38,7 +38,7 @@ namespace ASP
 {
     class FromATM
     {
-        public static Texture2D MBMToTexture(byte[] bytes, bool mipmaps)
+        public static Texture2D MBMToTexture(byte[] bytes, bool mipmaps, bool normalMap)
         {
             bool isNormalMap = false;
 
@@ -69,6 +69,7 @@ namespace ASP
                 alpha = true;
                 mult = 4;
             }
+            if (normalMap) texformat = TextureFormat.ARGB32;
 
             Texture2D texture = new Texture2D((int) width, (int) height, texformat, mipmaps);
             Color32[] colors = new Color32[width * height];
@@ -87,6 +88,107 @@ namespace ASP
                 }
             }
 
+            texture.SetPixels32(colors);
+
+            return texture;
+        }
+
+        private static Color32[] TGAType2(byte[] bytes, int width, int height, bool alpha)
+        {
+            Color32[] colors = new Color32[width * height];
+
+            int mult = 3;
+            if (alpha) mult = 4;
+            for (int i = 0; i < width * height; i++)
+            {
+                colors[i].b = bytes[18 + i*mult];
+                colors[i].g = bytes[18 + i*mult + 1];
+                colors[i].r = bytes[18 + i*mult + 2];
+                if (alpha)
+                {
+                    colors[i].a = bytes[18 + i*mult + 3];
+                }
+                else
+                {
+                    colors[i].a = 255;
+                }
+            }
+
+            return colors;
+        }
+
+        private static Color32[] TGAType10(byte[] bytes, int width, int height, bool alpha)
+        {
+            Color32[] colors = new Color32[width * height];
+
+            int i = 0;
+            int run = 0;
+            int n = 18;
+            while (i < width * height)
+            {
+                run = bytes[n++];
+                if ((run & 0x80) != 0)
+                {
+                    run = (run ^ 0x80) + 1;
+                    colors[i].b = bytes[n++];
+                    colors[i].g = bytes[n++];
+                    colors[i].r = bytes[n++];
+
+                    if (alpha) colors[i].a = bytes[n++];
+                    else colors[i].a = 255;
+                    
+                    i++;
+                    for (int c = 1; c < run; c++, i++)
+                    {
+                        colors[i] = colors[i - 1];
+                    }
+                }
+                else
+                {
+                    run += 1;
+                    for (int c = 0; c < run; c++, i++)
+                    {
+                        colors[i].b = bytes[n++];
+                        colors[i].g = bytes[n++];
+                        colors[i].r = bytes[n++];
+
+                        if (alpha) colors[i].a = bytes[n++];
+                        else colors[i].a = 255;
+                    }
+                }
+            }
+
+            return colors;
+        }
+
+        public static Texture2D TGAToTexture(byte[] bytes, bool mipmaps, bool normalMap)
+        {
+            byte imgType = bytes[2];
+            int width = bytes[12] | (bytes[13] << 8);
+            int height = bytes[14] | (bytes[15] << 8);
+
+            int depth = bytes[16];
+            bool alpha = false;
+            TextureFormat format = TextureFormat.RGB24;
+            if (depth == 32)
+            {
+                alpha = true;
+                format = TextureFormat.ARGB32;
+            }
+            if (normalMap) format = TextureFormat.ARGB32;
+
+            Debug.Log(String.Format("TWS: loading TGA file format {0}", imgType));
+
+            Color32[] colors;
+            if (imgType == 2) colors = TGAType2(bytes, width, height, alpha);
+            else if (imgType == 10) colors = TGAType10(bytes, width, height, alpha);
+            else
+            {
+                Debug.LogError(String.Format("TWS: Unsupported TGA format {0}", imgType));
+                colors = new Color32[width * height];
+            }
+
+            Texture2D texture = new Texture2D(width, height, format, mipmaps);
             texture.SetPixels32(colors);
 
             return texture;
